code/force-app/main/default/objects/Bond_Balance__c/Bond_Balance__c.object-meta.xml
<CustomObject>
    <label>自營債庫存</label>
    <nameField>
        <label>債券名稱</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>