code/force-app/main/default/objects/Bond_Balance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>自營債庫存</relationshipLabel>
    <relationshipName>Bond_Balance</relationshipName>
    <type>Lookup</type>
</CustomField>