code/force-app/main/default/objects/Bond_Balance__c/fields/Accumulated_Interest__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Interest__c</fullName>
    <label>累計配息</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>