code/force-app/main/default/objects/Bond_Balance__c/fields/Base_Date__c.field-meta.xml
<CustomField>
    <fullName>Base_Date__c</fullName>
    <label>基準日</label>
    <type>Date</type>
</CustomField>