code/force-app/main/default/objects/Bond_Balance__c/fields/Bond_Balance_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Bond_Balance_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>自營債庫存外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>