code/force-app/main/default/objects/Bond_Balance__c/fields/Bond_Number_ISIN__c.field-meta.xml
<CustomField>
    <fullName>Bond_Number_ISIN__c</fullName>
    <label>債券代號(ISIN)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>