code/force-app/main/default/objects/Bond_Balance__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>成本</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>