code/force-app/main/default/objects/Bond_Balance__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>設質面額</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>