code/force-app/main/default/objects/Bond_Balance__c/fields/Inventory_Face_Value_Unpledged__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Face_Value_Unpledged__c</fullName>
    <label>庫存面額(未設質)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>