code/force-app/main/default/objects/Bond_Balance__c/fields/Reference_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Reference_Market_Value__c</fullName>
    <label>參考市值</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>