code/force-app/main/default/objects/Bond_Balance__c/fields/Reference_Return_Rate_Excluding_Interest__c.field-meta.xml
<CustomField>
    <fullName>Reference_Return_Rate_Excluding_Interest__c</fullName>
    <label>參考報酬率(不含息)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>