code/force-app/main/default/objects/Bond_Balance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bond_Number_ISIN__c</columns>
    <columns>Base_Date__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Cost__c</columns>
    <columns>Inventory_Face_Value_Unpledged__c</columns>
    <columns>Field1__c</columns>
    <columns>Reference_Market_Price__c</columns>
    <columns>Reference_Market_Value__c</columns>
    <columns>Accumulated_Interest__c</columns>
    <columns>Reference_Return_Rate_Excluding_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>